--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -40,7 +40,7 @@
 
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-2">
-          <button type="submit" class="btn btn-blue btn-block">Sign in</button>
+          <button type="submit" class="btn btn-primary btn-blue btn-block">Sign in</button>
         </div>
       </div>
     </form>
