--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,36 @@
   <div class="float-element">
     <h3 class="blue">我要报修</h3>
     <hr>
+    <form class="form-horizontal" method="post">
+        {{ form.csrf_token }}
+        <select class="form-control">
+            {% for item in departments %}
+            <option value={{ item.id }}>{{ item.description }}</option>
+            {% endfor %}
+        </select>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Location</label>
+            <input type="text" class="form-control" name="location" placeholder="localtion">
+        </div>
+        <div class="form-group">
+            <label for="">Email</label>
+            <input type="email" class="form-control" name="reporter_email" placeholder="email">
+        </div>
+        <div class="form-group">
+            <label for="">Phone</label>
+            <input type="text" class="form-control" name="reporter_phone" placeholder="Phone">
+        </div>
+        <div class="form-group">
+            <label for="">description</label>
+            <textarea class="form-control" name="description" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default">Submit</button>
+            </div>
+        </div>
+    <form>
+
 
   </div><!-- /.float-element -->
 </div><!-- /.container -->
