--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -27,7 +27,7 @@
           {% if current_user.is_authenticated() %}
           <li>{{ current_user.role }} {{ current_user.username }} <a href="{{ url_for('user.logout') }}">登出</a></li>
           {% else %}
-          <li><a href="{{ url_for('user.signin') }}">登录</a></li>
+          <li><a href="{{ url_for('home.signin') }}">登录</a></li>
           {% endif %}
         </ul>
         
