--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
     <hr>
     <form class="form-horizontal" method="post">
         {{ form.csrf_token }}
-        <select class="form-control">
+        <select class="form-control" name="department_id">
             {% for item in departments %}
             <option value={{ item.id }}>{{ item.description }}</option>
             {% endfor %}
