--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,34 +8,36 @@
     <hr>
     <form class="form-horizontal" method="post">
         {{ form.csrf_token }}
-        <select class="form-control" name="department_id">
-            {% for item in departments %}
-            <option value={{ item.id }}>{{ item.description }}</option>
-            {% endfor %}
-        </select>
         <div class="form-group">
-            <label for="exampleInputEmail1">Location</label>
-            <input type="text" class="form-control" name="location" placeholder="localtion">
+            <label for="department">报修类别</label>
+            <select id="department" name="department_id" class="form-control">
+                {% for item in departments %}
+                <option value={{ item.id }}>{{ item.description }}</option>
+                {% endfor %}
+            </select>
         </div>
         <div class="form-group">
-            <label for="">Email</label>
-            <input type="email" class="form-control" name="reporter_email" placeholder="email">
+            <label for="location">故障位置</label>
+            <input type="text" class="form-control" id="location" name="location">
         </div>
         <div class="form-group">
-            <label for="">Phone</label>
-            <input type="text" class="form-control" name="reporter_phone" placeholder="Phone">
+            <label for="reporter_email">Email</label>
+            <input type="email" class="form-control" id="reporter_email" name="reporter_email">
         </div>
         <div class="form-group">
-            <label for="">description</label>
-            <textarea class="form-control" name="description" rows="3"></textarea>
+            <label for="reporter_phone">电话</label>
+            <input type="text" class="form-control" id="reporter_phone" name="reporter_phone">
+        </div>
+        <div class="form-group">
+            <label for="description">故障描述</label>
+            <textarea class="form-control" id="description" name="description" rows="3"></textarea>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">提交</button>
             </div>
         </div>
-    <form>
-
+    </form>
 
   </div><!-- /.float-element -->
 </div><!-- /.container -->
