--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,14 +3,15 @@
 
 <div class="container">
 
-  <div class="float-element">
+  <div class="row">
+      <div class="col-sm-6">
     <h3 class="blue">我要报修</h3>
     <hr>
-    <form class="form-horizontal" method="post">
+    <form class="" method="post">
         {{ form.csrf_token }}
         <div class="form-group">
             <label for="department">报修类别</label>
-            <select id="department" name="department_id" class="form-control">
+            <select id="department" required name="department_id" class="form-control">
                 {% for item in departments %}
                 <option value={{ item.id }}>{{ item.description }}</option>
                 {% endfor %}
@@ -18,19 +19,19 @@
         </div>
         <div class="form-group">
             <label for="location">故障位置</label>
-            <input type="text" class="form-control" id="location" name="location">
+            <input type="text" required class="form-control" id="location" name="location">
         </div>
         <div class="form-group">
             <label for="reporter_email">Email</label>
-            <input type="email" class="form-control" id="reporter_email" name="reporter_email">
+            <input type="email" required class="form-control" id="reporter_email" name="reporter_email">
         </div>
         <div class="form-group">
             <label for="reporter_phone">电话</label>
-            <input type="text" class="form-control" id="reporter_phone" name="reporter_phone">
+            <input type="text" required class="form-control" id="reporter_phone" name="reporter_phone">
         </div>
         <div class="form-group">
             <label for="description">故障描述</label>
-            <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+            <textarea class="form-control" required id="description" name="description" rows="3"></textarea>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
@@ -39,7 +40,22 @@
         </div>
     </form>
 
-  </div><!-- /.float-element -->
+    </div>
+    <div class="col-sm-6">
+        <form method="get" action='/ticket/'>
+            <div class="form-group">
+                <label>输入表单号以查询</label>
+                <input type="number" name="id">
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">提交</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+  </div><!-- /.row-->
 </div><!-- /.container -->
 
 {% endblock %}
