--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,7 +25,8 @@
 
         <ul class="nav navbar-nav navbar-right">
           {% if current_user.is_authenticated() %}
-          <li>{{ current_user.role }} {{ current_user.username }} <a href="{{ url_for('home.logout') }}">登出</a></li>
+          <li><a href="{{ url_for('ticket.mytickets') }}">{{ current_user.role }} {{ current_user.username }}</a></li>
+          <li><a href="{{ url_for('home.logout') }}">登出</a></li>
           {% else %}
           <li><a href="{{ url_for('home.signin') }}">登录</a></li>
           {% endif %}
