--- a/app/templates/viewticket.html
+++ b/app/templates/viewticket.html
@@ -7,46 +7,16 @@
     <h3 class="blue">报修单 #{{ ticket.id }}</h3>
 
     <hr>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">基本信息</h3>
-      </div>
-      <div class="panel-body">
-        <table class="table table-condensed table-striped">
-            <tr><th>部门</th><td>{{ ticket.department.name }}</td></tr>
-            <tr><th>位置</th><td>{{ ticket.location }}</td></tr>
-            <tr><th>处理状态</th><td>{{ ticket.status }}</td></tr>
-            <tr><th>报修时间</th><td>{{ ticket.report_time|localtime }}</td></tr>
-            <tr><th>分配时间</th><td>{{ ticket.assign_time|localtime }}</td></tr>
-            <tr><th>处理时间</th><td>{{ ticket.respond_time|localtime }}</td></tr>
-            <tr><th>报修人联系方式</th><td>{{ ticket.reporter_email }} {{ ticket.reporter_phone }}</td></tr>
-            {% if ticket.worker %}
-            <tr><th>处理人联系方式</th><td>{{ ticket.worker.email }} {{ ticket.worker.phone }}</td></tr>
-            {% endif %}
-        </table>
-      </div>
-    </div>
+    {% include 'ticket-display.html' %}
 
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">故障描述</h3>
-      </div>
-      <div class="panel-body">
-      {{ ticket.description|safe }}
-      </div>
-    </div>
-
-    {% if ticket.status == 'Closed' %}
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">处理结果</h3>
-      </div>
-      <div class="panel-body">
-      {{ ticket.response|safe }}
-      </div>
-    </div>
+    {% if ticket.status != 'Closed' and current_user.is_authenticated() %}
+    {% if current_user.role == 'Manager' %}
+    <a href="{{ url_for('ticket.respond', ticket_id=ticket.id) }}"><button class="btn btn-primary">分配报修单</button></a>
     {% endif %}
-
+    {% if current_user.role == 'Manager' or current_user == ticket.worker %}
+    <a href="{{ url_for('ticket.respond', ticket_id=ticket.id) }}"><button class="btn btn-success">完成报修单</button></a>
+    {% endif %}
+    {% endif %}
   </div><!-- /.float-element -->
 </div><!-- /.container -->
 
