--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,9 +4,12 @@
 <div class="container">
 
   <div class="row">
-      <div class="col-sm-6">
-    <h3 class="blue">我要报修</h3>
-    <hr>
+    <div class="col-sm-8">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">我要报修</h3>
+        </div>
+        <div class="panel-body">
     <form class="" method="post">
         {{ form.csrf_token }}
         <div class="form-group">
@@ -39,21 +42,26 @@
             </div>
         </div>
     </form>
+        </div>
+    </div><!-- panel -->
+    </div><!-- col-sm-8 -->
 
-    </div>
-    <div class="col-sm-6">
-        <form method="get" action='/ticket/'>
+    <div class="col-sm-4">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title">报修查询</h3>
+        </div>
+        <div class="panel-body">
+        <form method="get" action="/ticket/" class="form-inline">
             <div class="form-group">
-                <label>输入表单号以查询</label>
-                <input type="number" name="id">
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">提交</button>
-                </div>
+                <label>输入报修单号以查询</label>
+                <input class="form-control" type="number" name="id">
+                <button type="submit" class="btn btn-default">查询</button>
             </div>
         </form>
-    </div>
+        </div>
+    </div><!-- panel -->
+    </div><!-- col-sm-6 -->
 
   </div><!-- /.row-->
 </div><!-- /.container -->
