--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,7 +20,7 @@
         <ul class="nav navbar-nav">
           <li><a href="{{ url_for('home.index') }}">我要报修</a></li>
           <li><a href="{{ url_for('ticket.mytickets') }}">我的报修单</a></li>
-          <li><a href="{{ url_for('home.tickets') }}">所有报修单</a></li>
+          <li><a href="{{ url_for('ticket.all') }}">所有报修单</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
